Change History
==============

1.7b4 unreleased
----------------

- no changes yet

1.7b3 2011-06-14
----------------

- Add fieldset begin/end markers; these will replace fieldset folders going
  forward so that fieldsets may work better with the quickeditor. Fieldset
  folders will still work, but will not be addable by default.
  [smcmahon]

- Fix German translation of RangeValidator
  [fRiSi]

1.7b2 2011-06-05
----------------

- In quickedit, normalize required markers to Plone 4 style (after the label)
  so that we can use the same js for p4 and p4.1.
  [smcmahon]

- Drag and drop stopped working in 4.1 due to loss of id context in
  placeholder. Fixed.
  [smcmahon]

- Previous fix to duplicate action adapters did not preserve order of
  execution. Fixed.
  [smcmahon]

- Fix misleading failure in attachments tests. Test didn't account for
  quick editor changes.
  [smcmahon]

- Form fields could not be independently viewed in Plone 4/4.1.
  [smcmahon]

- Fixed issue with image captions not displaying in form prologue/epilogue
  [dextermilo]

1.7b1 2011-05-21
----------------

- Load ZCML for collective.js.jqueryui.
  [davisagli]

- Add collective.portlet.itemview integration.
  [toutpt]

- Use sets to avoid duplicate action adapters in form.py. Fixes
  http://plone.org/products/ploneformgen/issues/263
  [tkimnguyen]

1.7a2 2011-03-26
----------------

- Add confirm dialog for clearing saved data. The dialog text should
  be translatable with msgid clear-saved-input-confirm.
  [stevem]

- Add plone.protect tests to saver's clearSavedFormInput.
  [stevem]

- Get quickedit's drag and drop working with actions as well as fields.
  [stevem]

- Use collective.js.jqueryui instead of an embeded version custom of jqueryui.
  make it easy to integrate with other add-ons.
  Switch profile version from the egg version to an integer to increase with
  each changes done on the profile.
  [toutpt]

- Add Norwegian translations
  [mj]

1.7a1 2010-12-28
----------------
